fix: Styling bug fixes for padding and alignment in SheltersCardDetailedView.scss for mobile devices

--- a/client/src/components/SheltersCardDetailedView/SheltersCardDetailedView.scss
+++ b/client/src/components/SheltersCardDetailedView/SheltersCardDetailedView.scss
@@ -8,7 +8,7 @@
   grid-template-columns: 1fr auto 1fr;
   align-items: start;
   background-color: rgb(0, 0, 0);
-  padding: 0.5rem 0.1rem 2rem 0.1rem;
+  padding: 0.5rem 3rem 2rem 3rem;
   border-radius: 8px;
   text-align: center;
   text-align: -webkit-auto;
@@ -20,7 +20,6 @@
 
   @include mobile {
     height: 36vh;
-    width: 100%;
   }
 
   @include tablet {
@@ -36,30 +35,35 @@
     grid-column: 1;
     font-weight: bold;
     font-size: 0.5rem;
-    width: 100%;
+    width: 50vw;
     color: white;
-    padding-right: 0.6rem;
     align-self: center;
     font-family: 'Avenir Next';
     white-space: pre-line;
     line-height: 1rem;
     font-variant-caps: all-petite-caps;
-    text-align: right;
     display: flex;
     flex-direction: column;
-    -webkit-box-align: end;
+    -webkit-box-align: center;
 
     @include mobile {
-      font-size: 0.95rem;
+      font-size: 1rem;
+      text-align: center;
+      margin-right: -1rem;
+      margin-left: 2rem;
     }
 
     @include tablet {
       font-size: 1.1rem;
+      padding-right: 0.6rem;
+      text-align: right;
     }
 
     @include desktop {
       font-size: 1.3rem;
       line-height: 1.8rem;
+      padding-right: 0.6rem;
+      text-align: right;
     }
   }
 
@@ -67,7 +71,7 @@
     grid-column: 3;
     font-size: 1rem;
     // text-align: left;
-    width: 100%;
+    width: 50vw;
     color: white;
     padding-left: 0.6rem;
     align-self: center;
@@ -77,8 +81,12 @@
     line-height: 1rem;
     letter-spacing: 0.3px;
     font-variant-caps: all-petite-caps;
-    border-left: 2px solid #6232c1;
+    border-left: 3px solid #6232c1;
     text-align: left;
+
+    @include mobile {
+      margin-left: -1rem;
+    }
 
     @include desktop {
       font-size: 1.2rem;
