--- a/client/src/components/SheltersMap/SheltersMap.scss
+++ b/client/src/components/SheltersMap/SheltersMap.scss
@@ -82,6 +82,7 @@
 
   @include mobile {
     font-size: 1.1rem;
+    text-align: center;
   }
 
   @include tablet {
